--- a/markdown-note-taking/package.json
+++ b/markdown-note-taking/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
+    "build": "npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/PhilipOyelegbin/backend/tree/master#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^5.0.0",
     "languagetool-api": "^1.1.2",
