--- a/ecommerce-platform/package.json
+++ b/ecommerce-platform/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/PhilipOyelegbin/backend/tree/master#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
