--- a/silo_digital_wallet/package.json
+++ b/silo_digital_wallet/package.json
@@ -28,7 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "argon2": "^0.41.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.14.0",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
